feat: support anonymous issue feeds
